Rename the Datepicker Event Search demo to Date Range.

--- a/demos/datepicker/date-range.html
+++ b/demos/datepicker/date-range.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>jQuery UI Datepicker - Display multiple months</title>
+	<title>jQuery UI Datepicker - Select a Date Range</title>
 	<link rel="stylesheet" href="../../themes/base/jquery.ui.all.css">
 	<script src="../../jquery-1.4.4.js"></script>
 	<script src="../../ui/jquery.ui.core.js"></script>
